# QaterialHelloWorld

./: CMakeLists.txt  HelloWorld.cpp  HelloWorld.qml  Readme.md
